@@ -21,13 +21,15 @@ package org.apache.jena.riot;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 
 import org.apache.jena.atlas.io.IO;
 import org.apache.jena.atlas.web.ContentType;
 import org.apache.jena.graph.Graph;
-import org.apache.jena.riot.system.RiotLib;
+import org.apache.jena.query.Dataset;
+import org.apache.jena.rdf.model.Model;
+import org.apache.jena.riot.system.PrefixMap;
+import org.apache.jena.riot.system.PrefixMapFactory;
 import org.apache.jena.sparql.core.DatasetGraph;
 import org.apache.jena.sparql.util.Context;
 
@@ -36,11 +38,11 @@ import org.apache.jena.sparql.util.Context;
  * {@link RDFWriterBuilder} provides the means to setup the writer.
  * <p>
  * The process is
- * 
+ *
  * <pre>
  *    DatasetGraph dsg = ...
  *    RDFWriter writer = RDFWriter.create().source(dsg).lang(Lang.TTL).build();
- *    OutputStream out = 
+ *    OutputStream out =
  *    writer.output(out);
  * </pre>
  * or using abbreviated forms:
@@ -58,7 +60,7 @@ public class RDFWriter {
     private final RDFFormat format;
     private final String baseURI;
     private final Context context;
-    
+
     /** Create an {@link RDFWriterBuilder}.
      * <p>
      * Often used in a pattern such as:
@@ -69,17 +71,89 @@ public class RDFWriter {
      *        .output(System.out);
      * </pre>
      */
-    public static RDFWriterBuilder create() { return new RDFWriterBuilder(); }
-    
+    public static RDFWriterBuilder create() { return RDFWriterBuilder.create(); }
+
+    /** Create an {@link RDFWriterBuilder} and set the source of writing to the graph argument.
+     * @param graph     A {@link Graph}.
+     * @return RDFWriterBuilder
+     */
+    public static RDFWriterBuilder source(Graph graph) {
+        return create().source(graph);
+    }
+
+    /** Create an {@link RDFWriterBuilder} and set the source of writing to the graph argument.
+     * @param model     A {@link Model}.
+     * @return RDFWriterBuilder
+     */
+    public static RDFWriterBuilder source(Model model) {
+        return create().source(model);
+    }
+
+    /** Create an {@link RDFWriterBuilder} and set the source of writing to the graph argument.
+     * @param dataset     A {@link DatasetGraph}.
+     * @return RDFWriterBuilder
+     */
+    public static RDFWriterBuilder source(DatasetGraph dataset) {
+        return create().source(dataset);
+    }
+
+    /** Create an {@link RDFWriterBuilder} and set the source of writing to the graph argument.
+     * @param dataset     A {@link Dataset}.
+     * @return RDFWriterBuilder
+     */
+    public static RDFWriterBuilder source(Dataset dataset) {
+        return create().source(dataset);
+    }
+
+    /** Create an {@link RDFWriterBuilder} and set the source of writing to the graph argument.
+     * @param graph     A {@link Graph}.
+     * @return RDFWriterBuilder
+     * @deprecated Use {@link #source(Graph)}
+     */
+    @Deprecated
+    public static RDFWriterBuilder create(Graph graph) {
+        return create().source(graph);
+    }
+
+    /** Create an {@link RDFWriterBuilder} and set the source of writing to the graph argument.
+     * @param model     A {@link Model}.
+     * @return RDFWriterBuilder
+     * @deprecated Use {@link #source(Model)}
+     */
+    @Deprecated
+    public static RDFWriterBuilder create(Model model) {
+        return create().source(model);
+    }
+
+    /** Create an {@link RDFWriterBuilder} and set the source of writing to the graph argument.
+     * @param dataset     A {@link DatasetGraph}.
+     * @return RDFWriterBuilder
+     * @deprecated Use {@link #source(DatasetGraph)}
+     */
+    @Deprecated
+    public static RDFWriterBuilder create(DatasetGraph dataset) {
+        return create().source(dataset);
+    }
+
+    /** Create an {@link RDFWriterBuilder} and set the source of writing to the graph argument.
+     * @param dataset     A {@link Dataset}.
+     * @return RDFWriterBuilder
+     * @deprecated Use {@link #source(Dataset)}
+     */
+    @Deprecated
+    public static RDFWriterBuilder create(Dataset dataset) {
+        return create().source(dataset);
+    }
+
     /*package*/ RDFWriter(DatasetGraph dataset, Graph graph, RDFFormat format, Lang lang, String baseURI, Context context) {
         this.dataset = dataset;
         this.graph = graph;
-        // format may still be null - output to a file later. 
+        // format may still be null - output to a file later.
         this.format = chooseFormat(format, lang);
         this.baseURI = baseURI;
         this.context = context;
     }
-    
+
     private static RDFFormat chooseFormat(RDFFormat format, Lang lang) {
         if ( format != null )
             return format;
@@ -89,8 +163,8 @@ public class RDFWriter {
         format = RDFWriterRegistry.defaultSerialization(lang);
         return format;
     }
-    
-    /** Write and return as a string. 
+
+    /** Write and return as a string.
      * <p>
      * The {@code Lang} or {@code RDFFormat} must have been set.
      */
@@ -102,7 +176,7 @@ public class RDFWriter {
             return sw.toString();
         } catch (IOException ex) { IO.exception(ex); return null; }
     }
-    
+
     /** Write the source to the {@code OutputStream}.
      * <p>
      * The {@code Lang} or {@code RDFFormat} must have been set.
@@ -111,23 +185,31 @@ public class RDFWriter {
     public void output(OutputStream output) {
         output(output, format);
     }
-    
+
     /** Write the source to the Java {@code Writer}.
      * <p>
      * The {@code Lang} or {@code RDFFormat} must have been set.
      * @param javaWriter
-     * @deprecated Using Java Writers risk corrupting the character set. Only UTF-8 is safe. 
+     * @deprecated Using Java Writers risks corruption because of mismatch of character set. Only UTF-8 is safe.
      */
     @Deprecated
     public void output(Writer javaWriter) {
         output(javaWriter, format);
     }
-    
 
-    /** Write the source to the file. 
+    /** Write the source to a Java {@link StringWriter}.
      * <p>
-     * If neither {@code Lang} nor {@code RDFFormat} are set, an attempt to 
-     * guess an RDF Syntax is made from the file extension. 
+     * The {@code Lang} or {@code RDFFormat} must have been set.
+     * @param javaWriter
+     */
+    public void output(StringWriter javaWriter) {
+        output(javaWriter, format);
+    }
+
+    /** Write the source to the file.
+     * <p>
+     * If neither {@code Lang} nor {@code RDFFormat} are set, an attempt to
+     * guess an RDF Syntax is made from the file extension.
      * <p>Output to "-" goes to stdout.
      * @param filename
      */
@@ -140,20 +222,20 @@ public class RDFWriter {
                 throw new RiotException("Lang and RDFformat unset and can't determine syntax from '"+filename+"'");
             Lang lang = RDFLanguages.contentTypeToLang(ct);
             if ( lang == null )
-                throw new RiotException("No syntax registered for '"+ct.getContentType()+"'"); 
+                throw new RiotException("No syntax registered for '"+ct.getContentTypeStr()+"'");
             fmt = RDFWriterRegistry.defaultSerialization(lang);
         }
         if ( filename.equals("-") ) {
             output(System.out, fmt);
             return;
         }
-        Path p = Paths.get(filename);
+        Path p = Path.of(filename);
         try ( OutputStream out1 = Files.newOutputStream(p);
               OutputStream out = new BufferedOutputStream(out1, BUF_SIZE)){
             output(out, fmt);
         } catch (IOException ex) { IO.exception(ex); }
     }
-    
+
     private void output(OutputStream output, RDFFormat format) {
         if ( format == null )
             throw new RiotException("No syntax (Lang or RDFFormat) for output") ;
@@ -166,8 +248,8 @@ public class RDFWriter {
             return;
         }
         throw new RiotException("No graph or dataset to write") ;
-    }    
-    
+    }
+
     private void output(Writer javaWriter, RDFFormat format) {
         if ( format == null )
             throw new RiotException("No syntax (Lang or RDFFormat) for output") ;
@@ -180,9 +262,9 @@ public class RDFWriter {
             return;
         }
         throw new RiotException("No graph or dataset to write") ;
-    }    
+    }
 
-    // Allowing an externally set PrefixMap was (probably) a mistake. 
+    // Allowing an externally set PrefixMap was (probably) a mistake.
     private static WriterGraphRIOT createGraphWriter$(RDFFormat serialization) {
         WriterGraphRIOTFactory wf = RDFWriterRegistry.getWriterGraphFactory(serialization);
         if ( wf == null )
@@ -199,21 +281,29 @@ public class RDFWriter {
 
     private void write$(OutputStream out, Graph graph, RDFFormat serialization) {
         WriterGraphRIOT w = createGraphWriter$(serialization);
-        w.write(out, graph, RiotLib.prefixMap(graph), baseURI, context);
+        w.write(out, graph, prefixMap(graph), baseURI, context);
     }
 
     private void write$(OutputStream out, DatasetGraph dataset, RDFFormat serialization) {
         WriterDatasetRIOT w = createDatasetWriter$(serialization);
-        w.write(out, dataset, RiotLib.prefixMap(dataset), baseURI, context);
+        w.write(out, dataset, prefixMap(dataset), baseURI, context);
     }
 
     private void write$(Writer out, Graph graph, RDFFormat serialization) {
         WriterGraphRIOT w = createGraphWriter$(serialization);
-        w.write(out, graph, RiotLib.prefixMap(graph), baseURI,context);
+        w.write(out, graph, prefixMap(graph), baseURI,context);
     }
 
     private void write$(Writer out, DatasetGraph dataset, RDFFormat serialization) {
         WriterDatasetRIOT w = createDatasetWriter$(serialization);
-        w.write(out, dataset, RiotLib.prefixMap(dataset), baseURI, context);
+        w.write(out, dataset, prefixMap(dataset), baseURI, context);
+    }
+
+    private  PrefixMap prefixMap(DatasetGraph dataset) {
+        return PrefixMapFactory.createForOutput(dataset.prefixes());
+    }
+
+    private static PrefixMap prefixMap(Graph graph) {
+        return PrefixMapFactory.createForOutput(graph.getPrefixMapping());
     }
 }
