@@ -19,6 +19,7 @@
 package org.apache.jena.riot;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertTrue;
 
@@ -27,13 +28,17 @@ import java.io.InputStream;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+import java.util.Map;
 
 import org.apache.jena.graph.Graph;
 import org.apache.jena.graph.Node;
+import org.apache.jena.graph.NodeFactory;
 import org.apache.jena.riot.lang.LabelToNode;
 import org.apache.jena.riot.system.ErrorHandlerFactory;
 import org.apache.jena.riot.system.FactoryRDFStd;
+import org.apache.jena.riot.system.PrefixMap;
+import org.apache.jena.riot.system.PrefixMapFactory;
 import org.apache.jena.riot.system.stream.LocatorFile;
 import org.apache.jena.riot.system.stream.StreamManager;
 import org.apache.jena.sparql.graph.GraphFactory;
@@ -41,24 +46,24 @@ import org.apache.jena.sparql.sse.SSE;
 import org.junit.Test;
 
 public class TestRDFParser {
-    
+
     // Location of test files.
     private static String DIR = "testing/RIOT/Parser/";
-    private static String testdata = "@prefix : <http://example/ns#> . :x :x _:b .";  
-    
+    private static String testdata = "@prefix : <http://example/ns#> . :x :x _:b .";
+
     @Test public void source_not_uri_01() {
         Graph graph = GraphFactory.createGraphMem();
         RDFParserBuilder.create().lang(Lang.TTL).fromString(testdata).parse(graph);
         assertEquals(1, graph.size());
     }
-    
+
     @Test public void source_not_uri_02() {
         Graph graph = GraphFactory.createGraphMem();
         InputStream input = new ByteArrayInputStream(testdata.getBytes(StandardCharsets.UTF_8));
         RDFParser.create().lang(Lang.TTL).source(input).parse(graph);
         assertEquals(1, graph.size());
     }
-    
+
     @Test public void source_uri_01() {
         Graph graph = GraphFactory.createGraphMem();
         RDFParser.create().source("file:"+DIR+"data.ttl").parse(graph);
@@ -82,7 +87,7 @@ public class TestRDFParser {
     public void source_uri_04() {
         Graph graph = GraphFactory.createGraphMem();
         RDFParser.create()
-            .source(Paths.get(DIR+"data.ttl"))
+            .source(Path.of(DIR+"data.ttl"))
             .parse(graph);
         assertEquals(3, graph.size());
     }
@@ -104,13 +109,13 @@ public class TestRDFParser {
         RDFParser.fromString(testdata).lang(Lang.TTL).parse(graph);
         assertEquals(1, graph.size());
     }
-    
+
     @Test(expected=RiotNotFoundException.class)
     public void source_notfound_1() {
         // Last source wins.
         Graph graph = GraphFactory.createGraphMem();
         RDFParser.create()
-            .source(Paths.get(DIR+"data.nosuchfile.ttl"))
+            .source(Path.of(DIR+"data.nosuchfile.ttl"))
             .parse(graph);
         assertEquals(3, graph.size());
     }
@@ -147,9 +152,9 @@ public class TestRDFParser {
     @Test(expected=RiotException.class)
     public void errorHandler() {
         Graph graph = GraphFactory.createGraphMem();
-        // This test file contains Turtle. 
+        // This test file contains Turtle.
         RDFParser.create().source(DIR+"data.rdf")
-            // and no test log output.  
+            // and no test log output.
             .errorHandler(ErrorHandlerFactory.errorHandlerNoLogging)
             .parse(graph);
     }
@@ -178,16 +183,16 @@ public class TestRDFParser {
             return super.createURI(uriStr);
         }
     }
-    
+
     private RDFParserBuilder builder() {
         InputStream input = new ByteArrayInputStream(testdata.getBytes(StandardCharsets.UTF_8));
         return RDFParserBuilder.create().lang(Lang.TTL).source(input);
     }
-    
+
     @Test public void labels_01() {
         Graph graph = GraphFactory.createGraphMem();
         //LabelToNode.createUseLabelEncoded() ;
-        
+
         builder()
             .labelToNode(LabelToNode.createUseLabelAsGiven())
             .parse(graph);
@@ -207,10 +212,10 @@ public class TestRDFParser {
         assertEquals(1, graph.size());
         assertNotEquals(0, f.counter);
     }
-    
+
     // Canonical literals.
-    
-    @Test public void canonical_value_1() { 
+
+    @Test public void canonical_value_1() {
         testNormalization("0123", "0123", builder().canonicalValues(false));
     }
 
@@ -237,11 +242,27 @@ public class TestRDFParser {
     @Test public void canonical_langTag_3() {
         testNormalization("'abc'@En-gB", "'abc'@en-GB", builder().langTagCanonical());
     }
-    
+
+    @Test
+    public void parser_fragment() {
+        PrefixMap pmap = PrefixMapFactory.create(Map.of("", "http://example/"));
+        Graph g = RDFParser.fromString("<s> :p :o .")
+                .lang(Lang.TTL)
+                .prefixes(pmap)
+                .base("http://base/")
+                .toGraph();
+        assertFalse(g.isEmpty());
+        Graph g2 = GraphFactory.createDefaultGraph();
+        g2.add(NodeFactory.createURI("http://base/s"),
+               NodeFactory.createURI("http://example/p"),
+               NodeFactory.createURI("http://example/o"));
+        assertTrue(g2.isIsomorphicWith(g));
+    }
+
     private static String PREFIX = "PREFIX : <http://example/>\n ";
     private static Node s = SSE.parseNode(":s");
     private static Node p = SSE.parseNode(":p");
-    
+
     private void testNormalization(String input, String output, RDFParserBuilder builder) {
         Graph graph = GraphFactory.createGraphMem();
         String x = PREFIX+":s :p "+input;
