@@ -24,6 +24,8 @@ import junit.framework.TestSuite;
 import java.util.*;
 import java.io.*;
 
+import org.apache.jena.datatypes.RDFDatatype;
+import org.apache.jena.datatypes.TypeMapper;
 import org.apache.jena.graph.* ;
 import org.apache.jena.rdf.model.* ;
 import org.apache.jena.reasoner.* ;
@@ -37,10 +39,10 @@ import org.apache.jena.vocabulary.* ;
  * Unit tests for simple infrastructure pieces of the rule systems.
  */
 public class TestBasics extends TestCase  {
-    
+
     // Maximum size of binding environment needed in the tests
     private static final int MAX_VARS = 10;
-    
+
     // Useful constants
     Node p = NodeFactory.createURI("p");
     Node q = NodeFactory.createURI("q");
@@ -52,89 +54,192 @@ public class TestBasics extends TestCase  {
     Node n4 = NodeFactory.createURI("n4");
     Node n5 = NodeFactory.createURI("n5");
     Node res = NodeFactory.createURI("res");
-        
-     
+
+
     /**
      * Boilerplate for junit
-     */ 
+     */
     public TestBasics( String name ) {
-        super( name ); 
+        super( name );
     }
-    
+
     /**
      * Boilerplate for junit.
      * This is its own test suite
      */
     public static TestSuite suite() {
-        return new TestSuite( TestBasics.class ); 
-    }  
+        return new TestSuite( TestBasics.class );
+    }
 
     /**
      * Test the internal rule parser
      */
-    public void testRuleParser() {
-       String[] testRules = new String[] {
-            "(?a rdf:type ?_) -> (?a rdf:type ?b).",
-            "(?a rdf:type ?_), (?a rdf:type ?_) -> (?a rdf:type ?b).",
-            "(?a rdf:type max(?a,1)) -> (?a rdf:type 'foo').",
-            "(?a rdf:type ?_) -> addOne(?a).",
-            "(?a rdf:type ?_) -> [(?a rdf:type ?_) -> addOne(?a)].",
-           "(?a rdf:type ?_) -> (?a rdf:type '42').",
-           "(?a rdf:type ?_) -> (?a rdf:type 4.2).",
-           "(?a rdf:type ?_) -> (?a rdf:type ' fool that,I(am)').",
-            "[rule1: (?a rdf:type ?_) -> (?a rdf:type a)]",
-            "-> print(' ').",
-            "-> print(' literal with embedded \\' characters ').",
-            "-> print(\" literal characters \").",
-            "-> print(42). ",
-            "-> print('42'^^xsd:byte). ",
-            "-> print('42'^^http://www.w3.org/2001/XMLSchema#int). ",
-            "-> print('42'^^foobar:byte). ",
-            "-> print(<foo://a/file>). "
-        };
-        String[] testResults = new String[] {
-            "[ (?a rdf:type ?_) -> (?a rdf:type ?b) ]",
-            "[ (?a rdf:type ?_) (?a rdf:type ?_) -> (?a rdf:type ?b) ]",
-            "[ (?a rdf:type 'max(?a '1'^^http://www.w3.org/2001/XMLSchema#int)'^^urn:x-hp-jena:Functor) -> (?a rdf:type 'foo') ]",
-            "[ (?a rdf:type ?_) -> addOne(?a) ]",
-            "[ (?a rdf:type ?_) -> [ (?a rdf:type ?_) -> addOne(?a) ] ]",
-            "[ (?a rdf:type ?_) -> (?a rdf:type '42') ]",
-            "[ (?a rdf:type ?_) -> (?a rdf:type '4.2'^^http://www.w3.org/2001/XMLSchema#float) ]",
-            "[ (?a rdf:type ?_) -> (?a rdf:type ' fool that,I(am)') ]",
-            "[ rule1: (?a rdf:type ?_) -> (?a rdf:type <a>) ]",
-            "[ -> print(' ') ]",
-            "[ -> print(' literal with embedded ' characters ') ]",
-            "[ -> print(' literal characters ') ]",
-            "[ -> print('42'^^http://www.w3.org/2001/XMLSchema#int) ]",
-            "[ -> print('42'^^http://www.w3.org/2001/XMLSchema#byte) ]",
-            "[ -> print('42'^^http://www.w3.org/2001/XMLSchema#int) ]",
-            "[ -> print('42'^^http://foobar#byte) ]",
-            "[ -> print(<foo://a/file>) ]",
-        };
-        
-        PrintUtil.registerPrefix("foobar", "http://foobar#");
-        for (int i = 0; i < testRules.length; i++) {
-            Rule r = Rule.parseRule(testRules[i]);
-            assertEquals(testResults[i], r.toString());
+    public void testRuleParserBad01() {
+        execTestBad("(foo(?A) eg:p ?B) <- (?a, eg:p, ?B).");
+    }
+
+    public void testRuleParserBad02() {
+        execTestBad("(foo(?A) eg:p ?B) -> (?a, eg:p, ?B).");
+    }
+
+    private static void execTestBad(String ruleStr) {
+        boolean foundError = false;
+        try {
+            Rule r = Rule.parseRule(ruleStr);
+        } catch (Rule.ParserException e) {
+            foundError = true;
         }
-        
-        // Test for an illegal rule format
-        String[] testBadRules = new String[] {
-                "(foo(?A) eg:p ?B) <- (?a, eg:p, ?B)." ,
-                "(foo(?A) eg:p ?B) -> (?a, eg:p, ?B)." 
-        };
-        for ( String testBadRule : testBadRules )
-        {
-            boolean foundError = false;
-            try
-            {
-                Rule r = Rule.parseRule( testBadRule );
-            }
-            catch ( Rule.ParserException e )
-            {
-                foundError = true;
-            }
-            assertTrue( "Failed to find illegal rule", foundError );
+        assertTrue("Failed to find illegal rule: " + ruleStr, foundError);
+    }
+
+    public void testParser01() {
+        execTest("(?a rdf:type ?_) -> (?a rdf:type ?b).", "[ (?a rdf:type ?_) -> (?a rdf:type ?b) ]");
+    }
+
+    public void testParser02() {
+        execTest("(?a rdf:type ?_), (?a rdf:type ?_) -> (?a rdf:type ?b).", "[ (?a rdf:type ?_) (?a rdf:type ?_) -> (?a rdf:type ?b) ]");
+    }
+
+    public void testParser03() {
+        // Register so that parsing the string form works.
+        RDFDatatype dt = FunctorDatatype.theFunctorDatatype;
+        TypeMapper.getInstance().registerDatatype(dt);
+        String uri = FunctorDatatype.theFunctorDatatype.getURI();
+        execTest("(?a rdf:type max(?a,1)) -> (?a rdf:type 'foo').",
+                 "[ (?a rdf:type 'max(?a \\'1\\'^^http://www.w3.org/2001/XMLSchema#int)'^^"+uri+") -> (?a rdf:type 'foo') ]");
+        TypeMapper.getInstance().unregisterDatatype(dt);
+    }
+
+    public void testParser04() {
+        execTest("(?a rdf:type ?_) -> addOne(?a).", "[ (?a rdf:type ?_) -> addOne(?a) ]");
+    }
+
+    public void testParser05() {
+        execTest("(?a rdf:type ?_) -> [(?a rdf:type ?_) -> addOne(?a)].", "[ (?a rdf:type ?_) -> [ (?a rdf:type ?_) -> addOne(?a) ] ]");
+    }
+
+    public void testParser06() {
+        execTest("(?a rdf:type ?_) -> (?a rdf:type '42').", "[ (?a rdf:type ?_) -> (?a rdf:type '42') ]");
+    }
+
+    public void testParser07() {
+        execTest("(?a rdf:type ?_) -> (?a rdf:type 4.2).",
+                 "[ (?a rdf:type ?_) -> (?a rdf:type '4.2'^^http://www.w3.org/2001/XMLSchema#float) ]");
+    }
+
+    public void testParser08() {
+        execTest("(?a rdf:type ?_) -> (?a rdf:type ' fool that,I(am)').", "[ (?a rdf:type ?_) -> (?a rdf:type ' fool that,I(am)') ]");
+    }
+
+    public void testParser09() {
+        execTest("[rule1: (?a rdf:type ?_) -> (?a rdf:type a)]", "[ rule1: (?a rdf:type ?_) -> (?a rdf:type <a>) ]");
+    }
+
+    public void testParser10() {
+        execTest("-> print(' ').", "[ -> print(' ') ]");
+    }
+
+    public void testParser11() {
+        execTest("-> print(' literal with embedded \\' characters ').", "[ -> print(' literal with embedded \\' characters ') ]");
+    }
+
+    public void testParser12() {
+        execTest("-> print(\" literal characters \").", "[ -> print(' literal characters ') ]");
+    }
+
+    public void testParser13() {
+        execTest("-> print(42). ", "[ -> print('42'^^http://www.w3.org/2001/XMLSchema#int) ]");
+    }
+
+    public void testParser14() {
+        execTest("-> print('42'^^xsd:byte). ", "[ -> print('42'^^http://www.w3.org/2001/XMLSchema#byte) ]");
+    }
+
+    public void testParser15() {
+        execTest("-> print('42'^^http://www.w3.org/2001/XMLSchema#int). ", "[ -> print('42'^^http://www.w3.org/2001/XMLSchema#int) ]");
+    }
+
+    public void testParser16() {
+        PrintUtil.registerPrefix("foobar", "http://foobar#");
+        try {
+            execTest("-> print('42'^^foobar:byte). ", "[ -> print('42'^^http://foobar#byte) ]");
+        } finally {
+            PrintUtil.removePrefix("foobar");
+        }
+    }
+
+    public void testParser17() {
+        execTest("-> print(<foo://a/file>). ", "[ -> print(<foo://a/file>) ]");
+    }
+
+    public void testParser18() {
+        execTest("-> print(\"(\").", "[ -> print('(') ]");
+    }
+
+    public void testParser19() {
+        execTest("-> print(\",\").", "[ -> print(',') ]");
+    }
+
+    public void testParser20() {
+        execTest("-> print(',').", "[ -> print(',') ]");
+    }
+
+    public void testParser21() {
+        // Leading quote!
+        execTest("-> print(\"\\\"\").", "[ -> print('\"') ]");
+    }
+
+    public void testParser22() {
+        execTest("-> print('\"').", "[ -> print('\"') ]");
+    }
+
+    public void testParser23() {
+        execTest("-> print(\"'\").", "[ -> print('\\'') ]");
+    }
+
+    public void testParser24() {
+        execTest("-> print('\\'').", "[ -> print('\\'') ]");
+    }
+
+    public void testParser25() {
+        execTest("-> print('(').", "[ -> print('(') ]");
+    }
+
+    public void testParser26() {
+        execTest("-> print(')').", "[ -> print(')') ]");
+    }
+
+    public void testParser27() {
+        execTest("-> print(']').", "[ -> print(']') ]");
+    }
+
+    public void testParser28() {
+        execTest("-> print('[').", "[ -> print('[') ]");
+    }
+
+    public void testParser29() {
+        execTest("-> print(123).", "[ -> print('123'^^http://www.w3.org/2001/XMLSchema#int) ]");
+    }
+
+    public void testParser30() {
+        execTest("-> print(123, 'AB' 'CD').", "[ -> print('123'^^http://www.w3.org/2001/XMLSchema#int 'AB' 'CD') ]");
+    }
+
+    public void testParser31() {
+        execTest("-> print(123) print('AB') print('CD').", "[ -> print('123'^^http://www.w3.org/2001/XMLSchema#int) print('AB') print('CD') ]");
+    }
+
+    private static void execTest(String ruleStr, String expected) {
+        // Parse , check, parse the output, check.
+        Rule r = Rule.parseRule(ruleStr);
+        assertEquals(expected, r.toString());
+        try {
+            // And run on expected
+            Rule r2 = Rule.parseRule(expected);
+            assertEquals(r, r2);
+        } catch (Rule.ParserException ex) {
+            System.err.println(expected);
+            throw ex;
         }
     }
 
@@ -158,14 +263,14 @@ public class TestBasics extends TestCase  {
         assertTrue(! r3.equals(r5));
         assertTrue(! r3.equals(r6));
     }
-    
+
     /**
      * Test the BindingEnvironment machinery
      */
     public void testBindingEnvironment() {
         BindingStack env = new BindingStack();
         env.reset(MAX_VARS);
-        
+
         env.bind(3, n1);
         assertEquals(n1, env.getEnvironment()[3]);
         env.push();
@@ -197,8 +302,8 @@ public class TestBasics extends TestCase  {
             assertTrue("Failed to catch end of stack", false);
         } catch (IndexOutOfBoundsException e) {
         }
-    }  
-    
+    }
+
     /**
      * Test simple single clause binding
      */
@@ -223,21 +328,21 @@ public class TestBasics extends TestCase  {
         assertEquals(null, env.getEnvironment()[0]);
         assertEquals(null, env.getEnvironment()[1]);
         assertEquals(null, env.getEnvironment()[2]);
-        
+
         // Should succeed with two bindings
         match = FRuleEngine.match(p1, new Triple(n2, n1, n3), env);
         assertTrue(match);
         assertEquals(n2, env.getEnvironment()[0]);
         assertEquals(n3, env.getEnvironment()[1]);
         assertEquals(null, env.getEnvironment()[2]);
-        
+
         // should fail but leave prior bindings intact
         match = FRuleEngine.match(p2, new Triple(n1, n2, n2), env);
         assertTrue(!match);
         assertEquals(n2, env.getEnvironment()[0]);
         assertEquals(n3, env.getEnvironment()[1]);
         assertEquals(null, env.getEnvironment()[2]);
-        
+
         // should succeed with full binding set
         match = FRuleEngine.match(p2, new Triple(n3, n1, n2), env);
         assertTrue(match);
@@ -245,7 +350,7 @@ public class TestBasics extends TestCase  {
         assertEquals(n3, env.getEnvironment()[1]);
         assertEquals(n1, env.getEnvironment()[2]);
     }
-      
+
     /**
      * Minimal rule tester to check basic pattern match
      */
@@ -255,13 +360,13 @@ public class TestBasics extends TestCase  {
                        "[r3: (?a p ?a), (n1 p ?c), (n1, p, ?a) -> (?a, p, ?c)]" +
                        "[r4: (n4 ?p ?a) -> (n4, ?a, ?p)]";
         List<Rule> ruleList = Rule.parseRules(rules);
-        
+
         InfGraph infgraph = new BasicForwardRuleReasoner(ruleList).bind(Factory.createGraphMem());
         infgraph.add(new Triple(n1, p, n2));
         infgraph.add(new Triple(n2, p, n3));
         infgraph.add(new Triple(n2, q, n3));
         infgraph.add(new Triple(n4, p, n4));
-        
+
         TestUtil.assertIteratorValues(this, infgraph.find(null, null, null),
             new Triple[] {
                 new Triple(n1, p, n2),
@@ -273,7 +378,7 @@ public class TestBasics extends TestCase  {
                 new Triple(n4, n4, p),
             });
     }
-      
+
     /**
      * Test derivation machinery
      */
@@ -282,7 +387,7 @@ public class TestBasics extends TestCase  {
                        "[testRule2: (n1 q ?a) -> (n2, q, ?a)]" +
                        "[testRule3: (n2 p ?a), (n2 q ?a) -> (res p ?a)]";
         List<Rule> ruleList = Rule.parseRules(rules);
-        
+
         InfGraph infgraph = new BasicForwardRuleReasoner(ruleList).bind(Factory.createGraphMem());
         infgraph.setDerivationLogging(true);
         infgraph.add(new Triple(n1, p, n3));
@@ -299,7 +404,7 @@ public class TestBasics extends TestCase  {
                 new Triple(n2, q, n3),
                 new Triple(res, p, n3)
             });
-        
+
         Iterator<Derivation> derivs = infgraph.getDerivation(new Triple(res, p, n3));
         StringWriter outString = new StringWriter(250);
         PrintWriter out = new PrintWriter(outString);
@@ -308,7 +413,7 @@ public class TestBasics extends TestCase  {
             d.printTrace(out, true);
         }
         out.flush();
-        
+
         String testString = TestUtil.normalizeWhiteSpace("Rule testRule3 concluded (<res> <p> <n3>) <-\n" +
                 "    Rule testRule1 concluded (<n2> <p> <n3>) <-\n" +
                 "        Fact (<n1> <p> <n3>)\r\n" +
@@ -316,8 +421,8 @@ public class TestBasics extends TestCase  {
                 "        Fact (<n1> <q> <n3>)\r\n");
         assertEquals(testString, TestUtil.normalizeWhiteSpace(outString.getBuffer().toString()));
     }
-    
-          
+
+
     /**
      * Test axiom handling machinery
      */
@@ -327,14 +432,14 @@ public class TestBasics extends TestCase  {
                        "[testRule3: (n2 p ?a), (n2 q ?a) -> (res p ?a)]" +
                        "[axiom1: -> (n1 p n3)]";
         List<Rule> ruleList = Rule.parseRules(rules);
-        
+
         InfGraph infgraph = new BasicForwardRuleReasoner(ruleList).bind(Factory.createGraphMem());
         TestUtil.assertIteratorValues(this, infgraph.find(null, null, null),
             new Triple[] {
                 new Triple(n1, p, n3),
                 new Triple(n2, p, n3),
             });
-        
+
         infgraph.add(new Triple(n1, q, n4));
         infgraph.add(new Triple(n1, q, n3));
 
@@ -348,9 +453,9 @@ public class TestBasics extends TestCase  {
                 new Triple(n2, q, n3),
                 new Triple(res, p, n3)
             });
-        
+
     }
-     
+
     /**
      * Test schema partial binding machinery
      */
@@ -364,7 +469,7 @@ public class TestBasics extends TestCase  {
         Graph data = Factory.createGraphMem();
         data.add(new Triple(n1, q, n4));
         data.add(new Triple(n1, q, n3));
-        
+
         Reasoner reasoner =  new BasicForwardRuleReasoner(ruleList);
         Reasoner boundReasoner = reasoner.bindSchema(schema);
         InfGraph infgraph = boundReasoner.bind(data);
@@ -380,7 +485,7 @@ public class TestBasics extends TestCase  {
                 new Triple(res, p, n3)
             });
     }
-    
+
     /**
      * Test functor handling
      */
@@ -392,7 +497,7 @@ public class TestBasics extends TestCase  {
                        "[ (?x eg:prop functor(?v, ?*)) -> (?x eg:propfunc ?v) ]" +
                        "";
         List<Rule> ruleList = Rule.parseRules(rules);
-        
+
         Model data = ModelFactory.createDefaultModel();
         Resource R1 = data.createResource(PrintUtil.egNS + "R1");
         Resource D = data.createResource(PrintUtil.egNS + "D");
@@ -402,13 +507,13 @@ public class TestBasics extends TestCase  {
         Property propfunc = data.createProperty(PrintUtil.egNS, "propfunc");
         Property rbr = data.createProperty(ReasonerVocabulary.RBNamespace, "restriction");
         R1.addProperty(OWL.onProperty, p).addProperty(OWL.allValuesFrom, D);
-        
+
         Reasoner reasoner =  new BasicForwardRuleReasoner(ruleList);
         InfGraph infgraph = reasoner.bind(data.getGraph());
         Model infModel = ModelFactory.createModelForGraph(infgraph);
         Resource foo = infModel.createResource(PrintUtil.egNS + "foo");
         Resource bar = infModel.createResource(PrintUtil.egNS + "bar");
-        
+
         RDFNode flit = infModel.getResource(R1.getURI()).getRequiredProperty(rbr).getObject();
         assertNotNull(flit);
         assertEquals(flit.toString(), "allOK");
@@ -417,11 +522,11 @@ public class TestBasics extends TestCase  {
 //        assertEquals("all", func.getName());
 //        assertEquals(p.getNode(), func.getArgs()[0]);
 //        assertEquals(D.getNode(), func.getArgs()[1]);
-        
+
         Literal one = (Literal)foo.getRequiredProperty(propbar).getObject();
-        assertEquals(new Integer(1), one.getValue());
+        assertEquals(Integer.valueOf(1), one.getValue());
     }
-    
+
     /**
      * The the minimal machinery for supporting builtins
      */
@@ -433,7 +538,7 @@ public class TestBasics extends TestCase  {
                        "[axiom2: -> (n1 p 4)]" +
                        "";
         List<Rule> ruleList = Rule.parseRules(rules);
-        
+
         InfGraph infgraph = new BasicForwardRuleReasoner(ruleList).bind(Factory.createGraphMem());
         TestUtil.assertIteratorValues(this, infgraph.find(n1, q, null),
             new Triple[] {
@@ -444,14 +549,14 @@ public class TestBasics extends TestCase  {
             new Triple[] {
                 new Triple(n2, q, Util.makeIntNode(1))
             });
-        
+
     }
-    
+
     /**
      * The the "remove" builtin
      */
     public void testRemoveBuiltin() {
-        String rules =  
+        String rules =
                        "[rule1: (?x p ?y), (?x q ?y) -> remove(0)]" +
                        "";
         List<Rule> ruleList = Rule.parseRules(rules);
@@ -460,20 +565,20 @@ public class TestBasics extends TestCase  {
         infgraph.add(new Triple(n1, p, Util.makeIntNode(1)));
         infgraph.add(new Triple(n1, p, Util.makeIntNode(2)));
         infgraph.add(new Triple(n1, q, Util.makeIntNode(2)));
-        
+
         TestUtil.assertIteratorValues(this, infgraph.find(n1, null, null),
             new Triple[] {
                 new Triple(n1, p, Util.makeIntNode(1)),
                 new Triple(n1, q, Util.makeIntNode(2))
             });
-        
+
     }
-    
+
     /**
      * The the "drop" builtin
      */
     public void testDropBuiltin() {
-        String rules =  
+        String rules =
                        "[rule1: (?x p ?y) -> drop(0)]" +
                        "";
         List<Rule> ruleList = Rule.parseRules(rules);
@@ -482,14 +587,14 @@ public class TestBasics extends TestCase  {
         infgraph.add(new Triple(n1, p, Util.makeIntNode(1)));
         infgraph.add(new Triple(n1, p, Util.makeIntNode(2)));
         infgraph.add(new Triple(n1, q, Util.makeIntNode(2)));
-        
+
         TestUtil.assertIteratorValues(this, infgraph.find(n1, null, null),
             new Triple[] {
                 new Triple(n1, q, Util.makeIntNode(2))
             });
-        
+
     }
-    
+
     /**
      * Test the rebind operation.
      */
@@ -513,7 +618,7 @@ public class TestBasics extends TestCase  {
                 new Triple(n1, q, n3)
             });
     }
-     
+
     /**
      * Test size bug, used to blow up if size was called before any queries.
      */
@@ -525,7 +630,7 @@ public class TestBasics extends TestCase  {
         InfGraph infgraph = new BasicForwardRuleReasoner(ruleList).bind(data);
         assertEquals(infgraph.size(), 2);
     }
-    
+
     /**
      * Check validity report implementation, there had been a stupid bug here.
      */
@@ -536,7 +641,7 @@ public class TestBasics extends TestCase  {
         assertTrue(report.isValid());
         report.add(true,  "dummy", "dummy2");
         assertTrue( ! report.isValid());
-        
+
         report = new StandardValidityReport();
         report.add(false, "dummy", "dummy1");
         report.add(true,  "dummy", "dummy2");
@@ -549,7 +654,7 @@ public class TestBasics extends TestCase  {
         report.add(new ValidityReport.Report(false, "dummy", "dummy3"));
         assertTrue( ! report.isValid());
     }
-       
+
     /**
      * Test the list conversion utility that is used in some of the builtins.
      */
@@ -568,11 +673,11 @@ public class TestBasics extends TestCase  {
         data.add(new Triple(n4, rest, n5));
         data.add(new Triple(n5, first, q));
         data.add(new Triple(n5, rest, nil));
-        
+
         String rules = "[rule1: (?x p ?y) -> (?x q ?y)]";
         List<Rule> ruleList = Rule.parseRules(rules);
         InfGraph infgraph = new BasicForwardRuleReasoner(ruleList).bind(data);
-        
+
         RuleContext context = new BFRuleContext( (ForwardRuleInfGraphI) infgraph);
         List<Node> result = Util.convertList(n1, context);
         assertEquals(result.size(), 2);
@@ -583,5 +688,5 @@ public class TestBasics extends TestCase  {
         assertEquals(result2.size(), 1);
         assertEquals(result2.get(0), p);
     }
-     
+
 }
