@@ -21,7 +21,6 @@ package org.apache.jena.fuseki.main.access;
 import static org.junit.Assert.assertEquals;
 
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 import org.apache.jena.atlas.lib.StrUtils;
@@ -33,9 +32,9 @@ import org.apache.jena.sparql.sse.SSE;
 import org.apache.jena.system.Txn;
 
 
-/** Some data and functions common to access control tests. */ 
+/** Some data and functions common to access control tests. */
 public class AccessTestLib {
-    private static String dataStr = StrUtils.strjoinNL 
+    private static String dataStr = StrUtils.strjoinNL
         ("PREFIX : <http://test/>"
             ,""
             ,":s0 :p 0 ."
@@ -45,26 +44,25 @@ public class AccessTestLib {
             ,":g4 { :s4 :p 4 }"
             );
 
+    public static Node s0 = SSE.parseNode("<http://test/s0>");
+    public static Node s1 = SSE.parseNode("<http://test/s1>");
+    public static Node s2 = SSE.parseNode("<http://test/s2>");
+    public static Node s3 = SSE.parseNode("<http://test/s3>");
+    public static Node s4 = SSE.parseNode("<http://test/s4>");
 
-    public static Node s0 = SSE.parseNode("<http://test/s0>"); 
-    public static Node s1 = SSE.parseNode("<http://test/s1>"); 
-    public static Node s2 = SSE.parseNode("<http://test/s2>"); 
-    public static Node s3 = SSE.parseNode("<http://test/s3>"); 
-    public static Node s4 = SSE.parseNode("<http://test/s4>"); 
-
-    public static Node g1 = SSE.parseNode("<http://test/g1>"); 
-    public static Node g2 = SSE.parseNode("<http://test/g2>"); 
-    public static Node g3 = SSE.parseNode("<http://test/g3>"); 
-    public static Node g4 = SSE.parseNode("<http://test/g4>"); 
+    public static Node g1 = SSE.parseNode("<http://test/g1>");
+    public static Node g2 = SSE.parseNode("<http://test/g2>");
+    public static Node g3 = SSE.parseNode("<http://test/g3>");
+    public static Node g4 = SSE.parseNode("<http://test/g4>");
 
     public static void addTestData(DatasetGraph dsg) {
         Txn.executeWrite(dsg, ()->{
             RDFParser.create().fromString(dataStr).lang(Lang.TRIG).parse(dsg);
         });
     }
-    
+
     public static void assertSeen(Set<Node> visible, Node ... expected) {
-        Set<Node> expectedNodes = new HashSet<>(Arrays.asList(expected));
+        Set<Node> expectedNodes = Set.copyOf(Arrays.asList(expected));
         assertEquals(expectedNodes, visible);
     }
 }
